Markup: fix sidebar footer to fixed and move search icon a bit to right incase of native scrollbar

--- a/markup/css/components/sidebar/_sidebar-search.scss
+++ b/markup/css/components/sidebar/_sidebar-search.scss
@@ -12,7 +12,7 @@
 
 .sidebar-search__icon {
   position: absolute;
-  right: $padding--s;
+  right: $padding--m;
   top: 50%;
   margin-top: -12px;
   width: 24px;
